--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@
 src/tomcat/lib/*
 src/tomcat/webapps/*
 target/
-src/beats/metricbeat-7.4.2-darwin-x86_64/
+src/beats/metricbeat-*/
+src/beats/filebeat-*/
 .factorypath
