--- a/openshift/templates/webapp-deploy.json
+++ b/openshift/templates/webapp-deploy.json
@@ -77,6 +77,24 @@
                     "cpu": "200m"
                   }
                 },
+                "env": [
+                  {
+                    "name": "OPENSHIFT_KUBE_PING_NAMESPACE",
+                    "valueFrom": {
+                      "fieldRef": {
+                        "fieldPath": "metadata.namespace"
+                      }
+                    }
+                  },
+                  {
+                    "name": "OPENSHIFT_KUBE_PING_LABELS",
+                    "value": "deploymentconfig=showcase-java-web-app"
+                  },
+                  {
+                    "name": "CATALINA_OPTS",
+                    "value": "-Djava.security.egd=file:/dev/./urandom"
+                  }
+                ],
                 "imagePullPolicy": "Always",
                 "volumeMounts": [
                   {
@@ -136,6 +154,7 @@
                 "imagePullPolicy": "Always"
               }
             ],
+            "serviceAccountName": "showcase-java-web-app",
             "volumes": [
               {
                 "name": "access-logs",
@@ -226,6 +245,55 @@
       "status": {
         "ingress": null
       }
+    },
+    {
+      "apiVersion": "v1",
+      "kind": "ServiceAccount",
+      "metadata": {
+        "creationTimestamp": null,
+        "name": "showcase-java-web-app"
+      }
+    },
+    {
+      "apiVersion": "rbac.authorization.k8s.io/v1",
+      "kind": "Role",
+      "metadata": {
+        "name": "showcase-java-web-app"
+      },
+      "rules": [
+        {
+          "apiGroups": [
+            ""
+          ],
+          "resources": [
+            "pods"
+          ],
+          "verbs": [
+            "get",
+            "watch",
+            "list"
+          ]
+        }
+      ]
+    },
+    {
+      "apiVersion": "rbac.authorization.k8s.io/v1",
+      "kind": "RoleBinding",
+      "metadata": {
+        "creationTimestamp": null,
+        "name": "showcase-java-web-app"
+      },
+      "roleRef": {
+        "apiGroup": "rbac.authorization.k8s.io",
+        "kind": "Role",
+        "name": "showcase-java-web-app"
+      },
+      "subjects": [
+        {
+          "kind": "ServiceAccount",
+          "name": "showcase-java-web-app"
+        }
+      ]
     }
   ],
   "labels": {
